--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<script src="main.js"></script>
+<script src="performCalculations.js"></script>
 
 <head>
     <meta charset="UTF-8">
@@ -10,9 +10,7 @@
 
 <body>
 
-    <h1>
-        Calculator Web App v1.0
-    </h1>
+    <h1>Calculator Web App v1.0</h1>
     <h4>
         Created by: Patrick Archer
         <br>
